--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins&family=Rajdhani:wght@500&family=Roboto:wght@400;500&family=Saira+Extra+Condensed:wght@300&family=Source+Code+Pro&family=Teko:wght@300&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
